--- a/style.css
+++ b/style.css
@@ -1,14 +1,15 @@
 body{
-    background-color: grey;
+    background-color: rgb(248, 242, 242);
 }
 h3{
     text-align: center;
     text-decoration: underline;
+    background-color: rgb(235, 200, 200);
     color: blue;
 }
 th{
     border: 1px solid black;    
-    background-color: rgb(43, 43, 92); 
+    background-color: rgb(206, 198, 198); 
     
 }
 tbody td{
@@ -21,12 +22,13 @@ tbody td{
 }
 .forms{
 border: 1px solid black; 
-background-color: aqua;
+background-color: rgb(69, 173, 173);
 
 
 }
 input{
 margin-top: 5px;
+border-radius: 15px;
 }
 select{
 margin-top: 3px;
